pkgs/artifacts-cli/tests/snapshots/command_tests__regenerate_all_scenarios.snap
---
source: tests/command_tests.rs
info:
  program: artifacts
  args:
    - "--log-level=debug"
    - regenerate
    - /home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-cli/examples/bigger_setup
    - "--all"
  env:
    NIXOS_ARTIFACTS_BACKEND_CONFIG: /home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-cli/examples/bigger_setup/backend.toml
    TMPDIR: /tmp/artifacts-cli
  stdin: ""
---
success: true
exit_code: 0
----- stdout -----
DEBUG: Running nix build: "/run/current-system/sw/bin/nix" "build" "--impure" "-I" "flake=/home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-cli/examples/bigger_setup" "--no-link" "--print-out-paths" "--expr" "\nlet\n  system = \"x86_64-linux\";\n  filterAttrs =\n    pred: set:\n    builtins.removeAttrs set (builtins.filter (name: !pred name set.${name}) (builtins.attrNames set));\n  flake = builtins.getFlake (toString <flake>);\n  pkgs = flake.inputs.nixpkgs.legacyPackages.${system};\n  nixosConfigurations = builtins.attrNames (\n    filterAttrs (\n      machine: configuration: builtins.hasAttr \"artifacts\" configuration.options\n    ) flake.nixosConfigurations\n  );\n  homeConfigurations =\n    let hc = if builtins.hasAttr \"homeConfigurations\" flake then flake.homeConfigurations else {};\n    in builtins.attrNames (\n      filterAttrs (\n        user: configuration: builtins.hasAttr \"artifacts\" configuration.options\n      ) hc\n    );\n  nixos = map (name: {\n    machine = name;\n    artifacts = flake.nixosConfigurations.${name}.config.artifacts.store;\n    config =\n      if (builtins.hasAttr \"config\" flake.nixosConfigurations.${name}.config.artifacts) then\n        flake.nixosConfigurations.${name}.config.artifacts.config\n      else\n        { };\n  }) nixosConfigurations;\n  home = map (name: {\n    user = name;\n    artifacts = flake.homeConfigurations.${name}.config.artifacts.store;\n    config =\n      if (builtins.hasAttr \"config\" flake.homeConfigurations.${name}.config.artifacts) then\n        flake.homeConfigurations.${name}.config.artifacts.config\n      else\n        { };\n  }) homeConfigurations;\n  make = { inherit nixos home; };\nin\npkgs.writeText \"test.json\" (builtins.toJSON make)\n"
DEBUG: make config (pretty):
DEBUG: {
DEBUG:   "home": [],
DEBUG:   "nixos": [
DEBUG:     {
DEBUG:       "artifacts": {
DEBUG:         "artifact-one": {
DEBUG:           "files": {
DEBUG:             "first-secret": {
DEBUG:               "group": "root",
DEBUG:               "mode": "0400",
DEBUG:               "name": "first-secret",
DEBUG:               "owner": "root",
DEBUG:               "path": "/run/secrets/first-secret"
DEBUG:             }
DEBUG:           },
DEBUG:           "generator": "/nix/store/pwyaca1xgqx07pggwd6k3mywyc0mgjnd-test_generator_one.sh",
DEBUG:           "name": "artifact-one",
DEBUG:           "prompts": {},
DEBUG:           "serialization": "test",
DEBUG:           "shared": false
DEBUG:         },
DEBUG:         "artifact-two": {
DEBUG:           "files": {
DEBUG:             "second-secret": {
DEBUG:               "group": "root",
DEBUG:               "mode": "0400",
DEBUG:               "name": "second-secret",
DEBUG:               "owner": "root",
DEBUG:               "path": "/run/secrets/second-secret"
DEBUG:             }
DEBUG:           },
DEBUG:           "generator": "/nix/store/wciybsclyhlydjhk704mxyij7rrx02cw-test_generator_two.sh",
DEBUG:           "name": "artifact-two",
DEBUG:           "prompts": {},
DEBUG:           "serialization": "test",
DEBUG:           "shared": false
DEBUG:         }
DEBUG:       },
DEBUG:       "config": {},
DEBUG:       "machine": "machine-one"
DEBUG:     },
DEBUG:     {
DEBUG:       "artifacts": {
DEBUG:         "artifact-one": {
DEBUG:           "files": {
DEBUG:             "first-secret": {
DEBUG:               "group": "root",
DEBUG:               "mode": "0400",
DEBUG:               "name": "first-secret",
DEBUG:               "owner": "root",
DEBUG:               "path": "/run/secrets/first-secret"
DEBUG:             }
DEBUG:           },
DEBUG:           "generator": "/nix/store/pwyaca1xgqx07pggwd6k3mywyc0mgjnd-test_generator_one.sh",
DEBUG:           "name": "artifact-one",
DEBUG:           "prompts": {},
DEBUG:           "serialization": "test",
DEBUG:           "shared": false
DEBUG:         },
DEBUG:         "artifact-two": {
DEBUG:           "files": {
DEBUG:             "second-secret": {
DEBUG:               "group": "root",
DEBUG:               "mode": "0400",
DEBUG:               "name": "second-secret",
DEBUG:               "owner": "root",
DEBUG:               "path": "/run/secrets/second-secret"
DEBUG:             }
DEBUG:           },
DEBUG:           "generator": "/nix/store/wciybsclyhlydjhk704mxyij7rrx02cw-test_generator_two.sh",
DEBUG:           "name": "artifact-two",
DEBUG:           "prompts": {},
DEBUG:           "serialization": "test",
DEBUG:           "shared": false
DEBUG:         }
DEBUG:       },
DEBUG:       "config": {},
DEBUG:       "machine": "machine-two"
DEBUG:     }
DEBUG:   ]
DEBUG: }
[regenerate]
DEBUG:     files to produce -> 1 files
DEBUG:       - first-secret => /run/secrets/first-secret owner=root group=root
⚡ machine-one/artifact-one
DEBUG: bwrap command: bwrap --unshare-all --unshare-user --uid 1000 --gid 1000 --tmpfs / --chdir / --ro-bind /nix/store /nix/store --tmpfs /usr/lib/systemd --proc /proc --dev /dev --bind /tmp/artifacts-cli/prompt-artifact-one /tmp/artifacts-cli/prompt-artifact-one --bind /tmp/artifacts-cli/out-artifact-one /tmp/artifacts-cli/out-artifact-one --ro-bind /nix/store/lmj4gn57myfvylfasml508hwf1cr1m0y-test_generator_one.sh/bin /nix/store/lmj4gn57myfvylfasml508hwf1cr1m0y-test_generator_one.sh/bin --ro-bind /bin /bin --ro-bind /usr/bin /usr/bin --ro-bind /tmp/artifacts-cli/artifacts-cli-passwd-3029b01ac1f84b21.txt /etc/passwd -- /bin/sh /nix/store/lmj4gn57myfvylfasml508hwf1cr1m0y-test_generator_one.sh/bin/test_generator_one.sh
💾 serialize secrets
=== Content of /tmp/artifacts-cli/out-artifact-one/first-secret ===
one
=========================
[regenerate]
DEBUG:     files to produce -> 1 files
DEBUG:       - second-secret => /run/secrets/second-secret owner=root group=root
⚡ machine-one/artifact-two
DEBUG: bwrap command: bwrap --unshare-all --unshare-user --uid 1000 --gid 1000 --tmpfs / --chdir / --ro-bind /nix/store /nix/store --tmpfs /usr/lib/systemd --proc /proc --dev /dev --bind /tmp/artifacts-cli/prompt-artifact-two /tmp/artifacts-cli/prompt-artifact-two --bind /tmp/artifacts-cli/out-artifact-two /tmp/artifacts-cli/out-artifact-two --ro-bind /nix/store/gvl5rgmpdf10ibc73gkpi5x3zbi9gfsk-test_generator_two.sh/bin /nix/store/gvl5rgmpdf10ibc73gkpi5x3zbi9gfsk-test_generator_two.sh/bin --ro-bind /bin /bin --ro-bind /usr/bin /usr/bin --ro-bind /tmp/artifacts-cli/artifacts-cli-passwd-8e43491af6eee0ab.txt /etc/passwd -- /bin/sh /nix/store/gvl5rgmpdf10ibc73gkpi5x3zbi9gfsk-test_generator_two.sh/bin/test_generator_two.sh
💾 serialize secrets
=== Content of /tmp/artifacts-cli/out-artifact-two/second-secret ===
two
=========================
[regenerate]
DEBUG:     files to produce -> 1 files
DEBUG:       - first-secret => /run/secrets/first-secret owner=root group=root
⚡ machine-two/artifact-one
DEBUG: bwrap command: bwrap --unshare-all --unshare-user --uid 1000 --gid 1000 --tmpfs / --chdir / --ro-bind /nix/store /nix/store --tmpfs /usr/lib/systemd --proc /proc --dev /dev --bind /tmp/artifacts-cli/prompt-artifact-one /tmp/artifacts-cli/prompt-artifact-one --bind /tmp/artifacts-cli/out-artifact-one /tmp/artifacts-cli/out-artifact-one --ro-bind /nix/store/lmj4gn57myfvylfasml508hwf1cr1m0y-test_generator_one.sh/bin /nix/store/lmj4gn57myfvylfasml508hwf1cr1m0y-test_generator_one.sh/bin --ro-bind /bin /bin --ro-bind /usr/bin /usr/bin --ro-bind /tmp/artifacts-cli/artifacts-cli-passwd-3029b01ac1f84b21.txt /etc/passwd -- /bin/sh /nix/store/lmj4gn57myfvylfasml508hwf1cr1m0y-test_generator_one.sh/bin/test_generator_one.sh
💾 serialize secrets
=== Content of /tmp/artifacts-cli/out-artifact-one/first-secret ===
one
=========================
[regenerate]
DEBUG:     files to produce -> 1 files
DEBUG:       - second-secret => /run/secrets/second-secret owner=root group=root
⚡ machine-two/artifact-two
DEBUG: bwrap command: bwrap --unshare-all --unshare-user --uid 1000 --gid 1000 --tmpfs / --chdir / --ro-bind /nix/store /nix/store --tmpfs /usr/lib/systemd --proc /proc --dev /dev --bind /tmp/artifacts-cli/prompt-artifact-two /tmp/artifacts-cli/prompt-artifact-two --bind /tmp/artifacts-cli/out-artifact-two /tmp/artifacts-cli/out-artifact-two --ro-bind /nix/store/gvl5rgmpdf10ibc73gkpi5x3zbi9gfsk-test_generator_two.sh/bin /nix/store/gvl5rgmpdf10ibc73gkpi5x3zbi9gfsk-test_generator_two.sh/bin --ro-bind /bin /bin --ro-bind /usr/bin /usr/bin --ro-bind /tmp/artifacts-cli/artifacts-cli-passwd-8e43491af6eee0ab.txt /etc/passwd -- /bin/sh /nix/store/gvl5rgmpdf10ibc73gkpi5x3zbi9gfsk-test_generator_two.sh/bin/test_generator_two.sh
💾 serialize secrets
=== Content of /tmp/artifacts-cli/out-artifact-two/second-secret ===
two
=========================

----- stderr -----
